# MC-MMD-rust

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-mod.yml
common/: build.gradle
common/src/main/java/com/shiroha/mmdskin/: MmdClientResourceBootstrap.java  MmdSkin.java  MmdSkinClient.java  NativeFunc.java  NativeLibraryLoader.java
common/src/main/java/com/shiroha/mmdskin/api/: MmdSkinApi.java  ModelInfo.java
common/src/main/java/com/shiroha/mmdskin/bonesync/: BoneSyncManager.java  BoneSyncNetworkHandler.java
common/src/main/java/com/shiroha/mmdskin/config/: AbstractMmdSkinConfig.java  ConfigData.java  ConfigManager.java  IPhysicsConfig.java  IRenderConfig.java  IToonConfig.java  IVRConfig.java  ModelAnimConfig.java  ModelConfigData.java  ModelConfigManager.java  PathConstants.java  PhysicsConfigSnapshot.java  RuntimeConfigPort.java  RuntimeConfigPortHolder.java  StageConfig.java  StagePack.java  UIConstants.java
common/src/main/java/com/shiroha/mmdskin/expression/: BuiltinExpressionPreset.java  BuiltinExpressionRegistry.java  ExpressionApplicationService.java  ExpressionMatchRule.java  ExpressionSelection.java  ExpressionSelectionCodec.java  ModelMorphCatalog.java
common/src/main/java/com/shiroha/mmdskin/maid/: MaidActionNetworkHandler.java  MaidActionWheelScreen.java  MaidMMDModelManager.java  MaidMMDRenderer.java  MaidModelNetworkHandler.java  MaidModelRepositoryExtension.java  MaidModelSelectorScreen.java
common/src/main/java/com/shiroha/mmdskin/ui/: ActionWheelConfigScreen.java  ActionWheelScreen.java  ConfigWheelScreen.java  MaidConfigWheelScreen.java  MaterialVisibilityScreen.java  ModelSelectorScreen.java  MorphWheelConfigScreen.java  MorphWheelScreen.java  QuickModelSwitcher.java  (+1 more)
common/src/main/java/com/shiroha/skinlayers3d/: NativeFunc.java
common/src/main/resources/assets/mmdskin/default_anim/: Drink.vmd
common/src/main/resources/assets/mmdskin/lang/: en_us.json  ja_jp.json  zh_cn.json
common/src/main/resources/assets/mmdskin/shader/: compute_skinning.comp.glsl  toon_main_body.frag.glsl  toon_main_body.vert.glsl  toon_outline_body.frag.glsl  toon_outline_body.vert.glsl
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json  mmdskin-fabric.mixins.json
forge/: build.gradle
forge/src/main/resources/: mmdskin-forge.mixins.json
gradle/wrapper/: gradle-wrapper.properties
neoforge/: build.gradle  gradle.properties
neoforge/src/main/resources/: mmdskin-neoforge.mixins.json
rust_engine/: Cargo.toml  SKINNING_SOA_SIMD.md  build.rs
rust_engine/bullet_wrapper/: bw_api.cpp  bw_api.h
rust_engine/src/: lib.rs
rust_engine/src/animation/: animation_layer.rs  bezier_curve.rs  fbx_bone_mapping.rs  fbx_loader.rs  fbx_parser.rs  interpolation.rs  keyframe.rs  mod.rs  motion.rs  motion_track.rs  vmd_loader.rs  vmd_writer.rs  vpd_file.rs
rust_engine/src/jni_bridge/: animation_handle.rs  mod.rs  model_handle.rs  native_func.rs
rust_engine/src/model/: bone_mapping.rs  loader.rs  material.rs  mod.rs  runtime.rs  submesh.rs  vrm_extensions.rs  vrm_loader.rs  vrm_material.rs  vrm_mesh.rs  vrm_morph.rs  vrm_skeleton.rs
rust_engine/src/morph/: manager.rs  mod.rs  morph.rs
rust_engine/src/physics/: bullet_ffi.rs  config.rs  mmd_joint.rs  mmd_physics.rs  mmd_rigid_body.rs  mod.rs  spring_6dof.rs
rust_engine/src/skeleton/: bone_link.rs  bone_set.rs  ik_solver.rs  mod.rs
rust_engine/src/skinning/: mod.rs  skinning.rs  soa.rs
rust_engine/src/texture/: loader.rs  mod.rs
rust_engine/src/vr/: mod.rs  vr_ik.rs
rust_engine/src/vrm_runtime/: constraint.rs  control_rig.rs  expression.rs  first_person.rs  look_at.rs  mod.rs  model_state.rs  render_state.rs  runtime.rs  spring_bone.rs  tracking.rs
(+583 files in other folders)
