[package]
name = "mmd_engine"
version = "0.1.0"
edition = "2021"
authors = ["MMD Engine Team"]
description = "MMD Runtime Engine with JNI bindings for Minecraft"

[lib]
name = "mmd_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 本地依赖
mmd = { path = "deps/mmd-rs", default-features = false, features = ["arrayvec"] }
glam = { version = "0.29", features = ["std"] }
jni = "0.21"

# 外部依赖
bitflags = "2.6"
byteorder = "1.5"
encoding_rs = "0.8"
thiserror = "2"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
once_cell = "1.19"
vek = "0.17"
rayon = "1.11.0"

# Viewer 依赖（仅用于开发测试）
glium = { version = "0.34", optional = true }
winit = { version = "0.29", optional = true }
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4", optional = true }
raw-window-handle = { version = "0.5", optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = []
viewer = ["glium", "winit", "glutin", "glutin-winit", "raw-window-handle", "env_logger"]

[[bin]]
name = "viewer"
path = "src/bin/viewer/main.rs"
required-features = ["viewer"]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
