[package]
name = "mmd_engine"
version = "0.1.0"
edition = "2021"
authors = ["MMD Engine Team"]
description = "MMD Runtime Engine with JNI bindings for Minecraft"

[lib]
name = "mmd_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 本地依赖
mmd = { path = "deps/mmd-rs", default-features = false, features = ["arrayvec"] }
glam = { version = "0.29", features = ["std"] }
jni = "0.21"

# 外部依赖
bitflags = "2.6"
byteorder = "1.5"
encoding_rs = "0.8"
flate2 = "1.0"
thiserror = "2"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
once_cell = "1.19"
vek = "0.17"
rayon = "1.11.0"
gltf = { version = "1.4", features = ["names", "extras", "extensions", "KHR_materials_unlit"] }
serde_json = "1.0"
bytemuck = { version = "1.16", features = ["derive"], optional = true }

# Viewer / Demo 依赖（仅用于开发测试）
glium = { version = "0.36", optional = true }
winit = { version = "0.30.12", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
env_logger = { version = "0.11", optional = true }
egui = { version = "0.29", optional = true }
egui_glium = { version = "0.29", optional = true }
ash = { version = "0.38", optional = true }
ash-window = { version = "0.13", optional = true }
naga = { version = "22.1.0", features = ["spv-out", "wgsl-in"], optional = true }

# VR Demo 依赖
wgpu = { version = "0.17", optional = true }
egui-winit = { version = "0.29", optional = true }
egui-wgpu = { version = "0.29", optional = true, features = ["winit"] }
openxr = { version = "0.19", optional = true }
rfd = { version = "0.14", optional = true }
anyhow = { version = "1.0", optional = true }
pollster = { version = "0.3", optional = true }

[features]
default = []
viewer = ["glium", "winit", "glutin", "glutin-winit", "raw-window-handle", "env_logger", "egui", "egui_glium"]
vr_demo = [
    "winit",
    "env_logger",
    "egui",
    "egui-winit",
    "egui-wgpu",
    "wgpu",
    "openxr",
    "rfd",
    "anyhow",
    "pollster",
    "bytemuck",
    "ash",
    "ash-window",
    "naga",
]

[[bin]]
name = "viewer"
path = "src/bin/viewer/main.rs"
required-features = ["viewer"]

[[bin]]
name = "vr-pmx-demo"
path = "src/bin/vrdemo-old/main.rs"
required-features = ["vr_demo"]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
